# Portfolio-Management-System

./: .env.example  .gitignore  Dockerfile  README.md  check_schema.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  startup.ps1  startup.sh  test.ipynb  test_password.py  test_snaptrade.py
Architectures/: Alert Engine.mmd  Dynamic Allocation Engine.mmd  Execution Engine.mmd  Final Architecture.mmd  Overall Overall System Architecture.mmd  Regime Detection Engine.mmd  Trading System Engine.mmd
app/: __init__.py  main.py
app/core/: __init__.py  alerts.py  audit.py  config.py  currency.py  logging.py  security.py
app/integrations/: snaptrade.py
app/jobs/: __init__.py  daily_rebalance.py  data_refresh.py  email_digest.py  health_check.py  holdings_sync.py  portfolio_snapshot.py  scheduler.py  snaptrade_secret_rotation.py  utils.py
app/models/: __init__.py  database.py
app/routers/: __init__.py  admin.py  auth.py  notifications.py  portfolio.py  rebalancing.py  system.py
app/services/: __init__.py  alert_helper.py  email_service.py  market_data.py  performance_session.py  snaptrade_integration.py  (+1 more)
scripts/: add_user.py  check_db_positions.py  check_schema.py  debug_activities.py  dev.ps1  fix_cost_basis_currency.py  make_admin.py  make_owner.py  run_migration_benchmark_login.py  seed_health_data.py  test_balance_calc.py  test_kraken_holdings.py  test_live_prices.py  trigger_snapshot.py
tests/: test_delete_client_cleanup.py  test_integration.py  test_model.py  test_snaptrade_routes.py  test_snaptrade_secret_rotation_job.py
(+17 files in other folders)
